<resources>
    <string name="app_name">pRMT Device Monitor</string>

    <string name="ibi_label">IBI</string>
    <string name="emptyText">—</string>
    <string name="temp_label">Temperature</string>
    <string name="battery_label">Battery</string>    <string name="stop_recording">Stop recording</string>
    <string name="show_heart_rate">Show heart rate</string>
    <string name="reconnect_to_server">Reconnect to server</string>
    <string name="no_devices_connected">No devices connected</string>
    <string name="active_device">Device</string>

    <!--Overview activity-->
    <string name="button_connect">Reset</string>
    <string name="button_details">Details</string>
    <string name="request_E4_key">Enter E4 S/N</string>
    <string name="request_group_id">Enter Patient ID</string>
    <string name="button_input">-</string>
    <string name="header_battery"></string>
    <string name="header_device_status"></string>
    <string name="header_server_status">Server</string>
    <string name="header_device">Device</string>
    <string name="header_temp">T</string>
    <string name="header_hr">H</string>
    <string name="header_acceleration">A</string>
    <string name="header_device_key"></string>
    <string name="header_scan"></string>
    <string name="header_records_sent">Number of records sent</string>
    <string name="label_firebase_status">Firebase</string>
    <string name="label_group_id_input">Patient ID: %1$s</string>
    <string name="label_patient_id_label">Patient ID</string>
    <string name="tabDisplayName">Tablet</string>
    <string name="e4DisplayName">E4</string>
    <string name="biovDisplayName">Biovotion</string>
    <string name="deviceTypeLabel2">Angel</string>
    <string name="pebble2DisplayName">Pebble</string>
    <string name="phoneServiceDisplayName">Phone</string>
    <string name="disabledText">NA</string>

    <!--Status texts-->
    <string name="server_connected">Server connected</string>
    <string name="server_disconnected">Server disconnected</string>
    <string name="server_connecting">Connecting to server</string>
    <string name="server_uploading">Uploading</string>
    <string name="device_connected">CONNECTED</string>
    <string name="device_connecting">CONNECTING</string>
    <string name="device_disconnected">DISCONNECTED</string>
    <string name="device_scanning">Scanning…</string>
    <string name="start_recording">Start Recording</string>
    <string name="bluetooth_permission_failure">Cannot connect to Empatica E4DeviceManager without location permissions</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="playServicesUnavailable">Cannot connect, because Google Play Services is not available.</string>
    <string name="applicationServiceDisplayName">Application</string>
    <string name="battery_status">Battery status</string>

    <string name="filter_title">Filter device name</string>
    <string name="filter_help_label">Enter part of a device name or MAC address. Separate multiple options with commas.</string>
    <string name="firebase_fetching">Fetching remote config</string>

    <string name="patient_separator">Debug</string>
    <string name="patient_id_input_dialog">User ID</string>
    <string name="devices_separator">Connections</string>
    <string name="sync_separator">Synchronisation</string>
    <string name="sync_default">-</string>
    <string name="sync_button_description">Synchronize now</string>

    <string name="login_button">Log in</string>
    <string name="logout_button">Log out</string>
    <string name="scan_qr_button">Scan QR code</string>
    <string name="logging_in">Logging in</string>
    <string name="retrieving_configuration">Retrieving configuration</string>
    <string name="user_id_message">User: %1$s</string>
    <string name="study_id_message">Study: %1$s</string>
    <string name="server_url_message">Server: %1$s</string>
    <string name="login_failed_qr">QR code scanning failed. Please try again.</string>
    <string name="login_failed_mp">Server did not respond. Please try again later with internet connection turned on.</string>
    <string name="graph_separator">Graph</string>
    <string name="graph_conn_label">Connection:</string>
    <string name="graph_topic_label">Topic:</string>

    <string-array name="graph_topic_array">
        <item>android_phone_acceleration</item>
        <item>android_phone_battery_level</item>
        <item>android_empatica_e4_acceleration</item>
        <item>android_empatica_e4_battery_level</item>
        <item>android_empatica_e4_blood_volume_pulse</item>
        <item>android_empatica_e4_electrodermal_activity</item>
        <item>android_biovotion_vsm1_acceleration</item>
        <item>android_biovotion_vsm1_battery_level</item>
        <item>android_biovotion_vsm1_ppg_raw</item>
    </string-array>
</resources>
